--- a/data/it/tips/4-kathmandu.yml
+++ b/data/it/tips/4-kathmandu.yml
@@ -30,7 +30,7 @@ source:
 
   - icon: fa fa-bullseye
     number: 8
-    description: La <b>Durbar Square</b> a Kathmandu è costituita da tre aree collegate tra loro. A sud si apre Basantapur Square, un tempo stalla reale per gli elefanti. La zona principale di Durbar Square ospita numerosi tempi ed è situata a ovest. A nord-est si sviluppa invece la seconda parte di Durbar Square, dove troverete l’entrata dell’Hanuman Dhoka e altri templi. Da questo spiazzo aperto si allunga in direzione nord-est Makhan Tole, un tempo la principale arteria cittadina e tuttora la via principale di Kathmandu.
+    description: La <b>Durbar Square</b> a Kathmandu è costituita da tre aree collegate tra loro. A sud si apre Basantapur Square, un tempo stalla reale per gli elefanti. La zona principale di Durbar Square ospita numerosi templi ed è situata a ovest. A nord-est si sviluppa invece la seconda parte di Durbar Square, dove troverete l’entrata dell’Hanuman Dhoka e altri templi. Da questo spiazzo aperto si allunga in direzione nord-est Makhan Tole, un tempo la principale arteria cittadina e tuttora la via principale di Kathmandu.
 
   - icon: fa fa-map-o
     number: 9
@@ -62,7 +62,7 @@ source:
 
   - icon: fa fa-diamond
     number: 16
-    description: Kathmandu è una delle antiche città reali della valle, insieme con <b>Bhaktapur</b> e <b>Patan</b>. Entrambe le città sono raggiungibili in giornata da Kathmandu e sono entrambe mete consigliate. Noi in particolare abbiamo fatto tappa a Bhaktapur prima della partenza del nostro <a href="https://nepal.allyouneedtoknow.tips/it/approfondimenti/trekking-kathmandu/" target="_blank">trekking</a>. Abbiamo deciso di prendere un taxi per 1.200NPR e siamo arrivati a Bhaktapur in 1h30 circa.
+    description: Kathmandu è una delle antiche città reali della valle, insieme con <b>Bhaktapur</b> e <b>Patan</b>. Entrambe le città sono raggiungibili in giornata da Kathmandu e sono entrambe mete consigliate. Noi in particolare abbiamo fatto tappa a Bhaktapur prima della partenza del <a href="https://nepal.allyouneedtoknow.tips/it/approfondimenti/trekking-kathmandu/" target="_blank">trekking nella valle</a>. Abbiamo deciso di prendere un taxi per 1.200NPR e siamo arrivati a Bhaktapur in 1h30 circa.
 
   - icon: fa fa-bus
     number: 17
@@ -70,4 +70,4 @@ source:
 
   - icon: fa fa-globe
     number: 18
-    description: Le aree storiche di Kathmandu furono devastate dal <b>terremoto</b> di magnitudo locale 7,8 che colpì la nazione il 25 aprile 2015.
+    description: Le aree storiche di Kathmandu furono devastate dal <b>terremoto</b> di magnitudo 7,8 che colpì la nazione il 25 aprile 2015.
