--- a/data/it/tips/5-food.yml
+++ b/data/it/tips/5-food.yml
@@ -34,7 +34,7 @@ source:
 
   - icon: fa fa-street-view
     number: 9
-    description: Lo <b>street food</b> non e molto sicuro in Nepal. I sistemi di refrigerazione sono praticamente inesistenti e le condizioni igieniche non sono il massimo.
+    description: Lo <b>street food</b> non é molto sicuro in Nepal. I sistemi di refrigerazione sono praticamente inesistenti e le condizioni igieniche non sono il massimo.
 
   - icon: fa fa-list
     number: 10
