--- a/data/it/tips/1-general.yml
+++ b/data/it/tips/1-general.yml
@@ -2,11 +2,11 @@ name: Generali
 source:
   - icon: fa fa-flag
     number: 0
-    description: Il Nepal è l'unico paese al mondo a non avere una bandiera rettangolare.
+    description: Il Nepal è l'unico paese al mondo a non avere una <b>bandiera</b> rettangolare.
 
   - icon: fa fa-money
     number: 1
-    description: La Rupia nepalese (NPR) è la moneta ufficiale. Controllate il cambio attuale <a href="https://www.xe.com/currencyconverter/convert/?Amount=1&From=NPR&To=EUR" target="_blank">qui</a>.
+    description: La <b>Rupia nepalese</b> (NPR) è la moneta ufficiale. Controllate il cambio attuale <a href="https://www.xe.com/currencyconverter/convert/?Amount=1&From=NPR&To=EUR" target="_blank">qui</a>.
 
   - icon: fa fa-sign-in
     number: 2
@@ -46,15 +46,15 @@ source:
 
   - icon: fa fa-money
     number: 11
-    description: Non fidatevi dei prezzi esposti su booking.com. Quando sarete in Nepal, probabilmente pagherete più di quello che pensavate. Ecco perché potrebbe valere la pena non prenotare in anticipo e trovare una camera direttamente sul posto.
+    description: Non fidatevi dei prezzi esposti su <b>booking.com</b>. Quando sarete in Nepal, probabilmente pagherete più di quello che pensavate. Ecco perché potrebbe valere la pena non prenotare in anticipo e trovare una camera direttamente sul posto.
   
   - icon: fa fa-thermometer-0
     number: 12
-    description: Non c'è riscaldamento nelle case nepalesi, quindi, se viaggiate in inverno, assicuratevi di avere indumenti termici e pigiami caldi per la notte, anche se non partirete per un trekking ad alta quota. Anche un sacco a pelo potrebbe essere utile seppur rimaniate solo a Kathmandu.
+    description: Non c'è riscaldamento nelle case nepalesi, quindi, se viaggiate in inverno, assicuratevi di avere indumenti termici e pigiami caldi per la notte, anche se non partirete per un trekking ad alta quota. Anche un <b>sacco a pelo</b> potrebbe essere utile seppur rimaniate solo a Kathmandu.
 
   - icon: fa fa-fire
     number: 13
-    description: Dato che le case sono così fredde, quando scende il sole le persone accendono dei fuochi sulla strada, davanti alla porta di casa. Succede anche a Kathmandu. Le persone si radunano intorno al fuoco per riscaldarsi e cenare con la propria famiglia.
+    description: Dato che le case sono così fredde, quando scende il sole le persone accendono dei fuochi sulla strada, davanti alla porta di casa. Succede anche a <b>Kathmandu</b>. Le persone si radunano intorno al fuoco per riscaldarsi e cenare con la propria famiglia.
 
   - icon: fa fa-plug
     number: 14
@@ -77,7 +77,7 @@ source:
 
   - icon: fa fa-warning
     number: 18
-    description: Le mucche sono animali sacri, quindi non possono essere nè uccise nè mangiate. È abbastanza frequente incontrarne qualcuna che vaga libera a Kathmandu.
+    description: Le <b>mucche</b> sono animali sacri, quindi non possono essere nè uccise nè mangiate. È abbastanza frequente incontrarne qualcuna che vaga libera a Kathmandu.
 
   - icon: fa fa-paw
     number: 19
@@ -88,6 +88,10 @@ source:
       <br> - perchè nell'immaginario religioso i cani sono i guardiani dell'inferno.
       <br> Ad ogni modo, gli induisti sostengono che questo loro odio verso i cani non sia reale e sia solo una leggenda, quindi non si esclude che la situazione dei cani randagi sia semplicemente dovuta ad un sovraffollamento e ad una riproduzione non controllata.
 
-  - icon: fa fa-child
+  - icon: fa fa-medkit
     number: 20
+    description: Vi suggeriamo di prendere dei fermenti lattici prima del vostro arrivo in Nepal, diciamo per i 7-10 giorni che precedono la partenza. Inoltre, non dimenticatevi di portare con voi dei medicinali che prevengano o curino la <b>diarrea</b>, che si prende molto facilmente. I medicinali e gli antibiotici costano molto poco in Nepal, ma non contate su questo e fate scorta prima di partire, anche perchè non si trovano farmacie proprio ovunque.
+
+  - icon: fa fa-child
+    number: 21
     description: Potreste incontrare bambini che vi chiedono caramelle o cioccolato. Fate in modo di averne sempre un po' con voi.
