--- a/data/en/tips/2-trekking.yml
+++ b/data/en/tips/2-trekking.yml
@@ -74,4 +74,4 @@ source:
 
   - icon: fa fa-tint
     number: 17
-    description: Always bring with you at least one water bottle and the proper instruments to filter water. We bought a bottle with an integrated filtering system, the <a href="https://amzn.to/2VkLeZ7" target="_blank">Grayl Geopress purifier</a>. However, something like <a href="https://amzn.to/32s4ANe" target="_blank">these ones</a> could be enough too.
+    description: Always bring with you at least one water bottle and the proper instruments to <b>filter water</b>. We bought a bottle with an integrated filtering system, the <a href="https://amzn.to/2VkLeZ7" target="_blank">Grayl Geopress purifier</a>. However, something like <a href="https://amzn.to/32s4ANe" target="_blank">these ones</a> could be enough too.
