--- a/data/it/tips/3-transport.yml
+++ b/data/it/tips/3-transport.yml
@@ -54,12 +54,12 @@ source:
 
   - icon: fa fa-bus
     number: 14
-    description: Viaggiare di notte in bus è fortemente sconsigliato. Le strade sono dissestate e sebbene anche durante il giorno la velocità di certi autisti faccia rizzare i capelli, pare che di notte la situazione peggiori.
+    description: Viaggiare di <b>notte in bus</b> è fortemente sconsigliato. Le strade sono dissestate e sebbene anche durante il giorno la velocità di certi autisti faccia rizzare i capelli, pare che di notte la situazione peggiori.
 
   - icon: fa fa-car
     number: 15
-    description: Le tariffe dei taxi (seppur negoziabili e non fissate per legge) variano in base all'orario. I viaggi all'alba o in tarda serata costano mediamente di più.
+    description: Le <b>tariffe dei taxi</b> (seppur negoziabili e non fissate per legge) variano in base all'orario. I viaggi all'alba o in tarda serata costano mediamente di più.
 
   - icon: fa fa-car
     number: 16
-    description: Non è così inusuale che la navetta aeroportuale che il vostro ostello vi aveva promesso non si presenti al vostro arrivo in aeroporto. Non andate in panico, ci sono un sacco di taxi (o pseudo tali) nella zona degli arrivi e il prezzo è lo stesso che offrono anche gli ostelli (10USD).
+    description: Non è così inusuale che la <b>navetta aeroportuale</b> che il vostro ostello vi aveva promesso non si presenti al vostro arrivo in aeroporto. Non andate in panico, ci sono un sacco di taxi (o pseudo tali) nella zona degli arrivi e il prezzo è lo stesso che offrono anche gli ostelli (10USD).
