--- a/data/en/tips/2-trekking.yml
+++ b/data/en/tips/2-trekking.yml
@@ -75,3 +75,11 @@ source:
   - icon: fa fa-tint
     number: 17
     description: Always bring with you at least one water bottle and the proper instruments to <b>filter water</b>. We bought a bottle with an integrated filtering system, the <a href="https://amzn.to/2VkLeZ7" target="_blank">Grayl Geopress purifier</a>. However, something like <a href="https://amzn.to/32s4ANe" target="_blank">these ones</a> could be enough too.
+
+  - icon: fa fa-angle-double-up
+    number: 18
+    description: <b>Machapuchare</b> is probably the most known mount of Annapurna, named as <b>fishtale</b> due to its summit shape. It's a sacred summit so no one's allowed to set food on Machapuchare's trails. Moreover, the Nepalese Goverment doesn't release any permit to climb there. That's why no one had never climbed to its top. At least, not officially...
+
+  - icon: fa fa-arrow-up
+    number: 19
+    description: If you'd like to encounter a <b>yak</b>, you should probably climb over 4,000m/13,000ft. Yaks are long-haired domesticated bovids, very diffused in the Tibetan Plateau.
