--- a/data/en/tips/4-kathmandu.yml
+++ b/data/en/tips/4-kathmandu.yml
@@ -71,3 +71,7 @@ source:
   - icon: fa fa-users
     number: 19
     description: <b>Newari</b> are the historical inhabitants of the Kathmandu Valley and its surrounding areas in Nepal. Today, they consistently rank as the most economically, politically and socially advanced community of Nepal.
+
+  - icon: fa fa-chevron-circle-up
+    number: 20
+    description: <b>Swayambhu</b>, also known as <b>Monkey temple</b> for the numerous monkeys living in that area, is an ancient religious architecture atop a hill in the Kathmandu Valley, west of Kathmandu city. We do suggest to walk there, it's a 40min walk from Thamel and it allows you to see the capital suburbs and how real life looks like over there.
