--- a/data/it/tips/4-kathmandu.yml
+++ b/data/it/tips/4-kathmandu.yml
@@ -76,3 +76,7 @@ source:
   - icon: fa fa-users
     number: 19
     description: I <b>Newari</b> sono gli abitanti storici della Valle di Kathmandu e dintorni. Rappresentano ad oggi la popolazione più sviluppata dal punto di vista economico, politico e sociale in Nepal.
+
+  - icon: fa fa-chevron-circle-up
+    number: 20
+    description: <b>Swayambhu</b>, conosciuto anche come <b>Monkey temple</b> per le numerose scimmie che abitano l'area, è un'antica architettura religiosa situata in cima ad una collina nella valle di Kathmandu, ad ovest della capitale. Consigliamo di raggiungerla a piedi con una camminata di 40 minuti circa da Thamel, così da attraversare la periferia della capitale e prendere visione della vera vita nepalese.
