--- a/data/en/tips/4-kathmandu.yml
+++ b/data/en/tips/4-kathmandu.yml
@@ -75,3 +75,7 @@ source:
   - icon: fa fa-chevron-circle-up
     number: 20
     description: <b>Swayambhu</b>, also known as <b>Monkey temple</b> for the numerous monkeys living in that area, is an ancient religious architecture atop a hill in the Kathmandu Valley, west of Kathmandu city. We do suggest to walk there, it's a 40min walk from Thamel and it allows you to see the capital suburbs and how real life looks like over there.
+
+  - icon: fa fa-map marker
+    number: 21
+    description: The <b>Pashupatinath Temple</b> is a famous and sacred Hindu temple complex that is located on the banks of the Bagmati River, approximately 5 km north-east of Kathmandu. Tourists can not access the temple area, but they can assist to funeral ceremonies taking place on the river side, seeing dead people being burned in flames to assure them to reincarnation.
