--- a/data/en/tips/6-religion.yml
+++ b/data/en/tips/6-religion.yml
@@ -35,3 +35,7 @@ source:
   - icon: fa fa-female
     number: 9
     description: <b>Kumari</b> is the Living Goddess for Hindus, a young Newari girl living in Kathmandu. The word Kumari is derived from the Sanskrit Kaumarya, meaning "princess". You can visit the Kumari Ghar across Durbar Square, at Basantapur, where she resides and you may be in luck to catch a glimpse of this Goddess. When her first menstruation begins, it is believed that the goddess vacates her body. Serious illness or a major loss of blood from an injury also causes loss of deity.
+
+  - icon: fa fa-fire
+    number: 10
+    description: <b>Pashupatinath Temple</b> is the most sacred temple for Hindi people. It is famous for the funeral ceremonies taking place in there. Hindi believe that a well done funeral ritual at this temple only can assure dead people with reincarnation of their souls.
