--- a/config.toml
+++ b/config.toml
@@ -37,6 +37,7 @@ enableRobotsTXT = true
   custom_js  = []
   metadata_allowed_blog = [ "in-depth", "approfondimenti" ]
   amazon_affiliate = "true"
+  ogimage = "media/bhaktapur-woman.jpg"
 
 [params.theme]
   main_color = "#CB2E40"
